tests/NormalTests/paczka1/fuzzy1/37068104.err
Error in line 11: yjW6w8aB S975 15,4
Error in line 21: d7trjFDyb A421 34,81
Error in line 5: FNjJx6 A540 3,8
Error in line 31: 7bzg A421 13,0
Error in line 35: yjW6w8aB A540 41,9
Error in line 37: yjW6w8aB A421 98,7
